--- a/AplicacaoWeb/Views/Shared/_Layout.cshtml
+++ b/AplicacaoWeb/Views/Shared/_Layout.cshtml
@@ -43,6 +43,20 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://unpkg.com/blip-chat-widget" type="text/javascript">
+    </script>
+    <script>
+        (function () {
+            window.onload = function () {
+                new BlipChat()
+                    .withAppKey('c2VydmljZWNsaWVudGUxOjQ3MWI5ODY2LTBmMDEtNGIwYS1iY2NiLTVkODcwMzIzMTI0Mw==')
+                    .withButton({ "color": "#2CC3D5", "icon": "" })
+                    .withCustomCommonUrl('https://chat.blip.ai/')
+                    .build();
+            }
+        })();
+    </script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
