Criar apresentação do produto.

--- a/AplicacaoWeb/Views/Shared/_Layout.cshtml
+++ b/AplicacaoWeb/Views/Shared/_Layout.cshtml
@@ -24,12 +24,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Atividade" asp-action="Index">Atividade</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Produto" asp-route-id="616a04feb2df6856b16e23cc" asp-action="Index">Cursos de programação</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Produto"asp-route-id="616a1e79b2df6856b1954a54"  asp-action="Index">Cursos de Devops</a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div >
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
